# pythonrun

./: MANIFEST.in  README.md  pyproject.toml  setup.py  test_config.py  test_entry.py  test_typo_detection.py
.github/workflows/: release.yml
autopython/: README.md  setup.py
autopython/autopython/: main.py
autopython/autopython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
autopython/tests/: test_parse_imports.py
pythonrun/: _version.py  main.py  package_mapping.json  utils.py
pythonrun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: basic_import.py
