[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonrun"
version = "1.1.2"  # 固定版本号，用于PyPI上传，同时更改setup.py中的版本号
# dynamic = ["version"]  # 本地开发时使用
description = "自动导入和安装Python模块的工具"
readme = "README.md"
requires-python = ">=3.13" # 很抱歉，但是importlib.util.find_spec() 在python3.13中才支持, 不然太耗性能了
license = {text = "MIT"}
authors = [
    {name = "StevenLi-phoenix", email = abroad.whinny.3u@icloud.com"}
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["import", "package management", "dependency", "automation"]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/StevenLi-phoenix/pythonrun"
"Bug Tracker" = "https://github.com/StevenLi-phoenix/pythonrun/issues"
"Source" = "https://github.com/StevenLi-phoenix/pythonrun"

[project.scripts]
pythonrun = "pythonrun.main:main"

[tool.setuptools_scm]
write_to = "pythonrun/_version.py"
local_scheme = "no-local-version"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 